--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/LanguageTeacher.API.csproj
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/LanguageTeacher.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>8cb2f1b7-0328-423d-9fa9-357d067a9ab8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
