--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/LanguageTeacher.API.csproj
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/LanguageTeacher.API.csproj
@@ -10,8 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LanguageTeacher.App\LanguageTeacher.App\LanguageTeacher.App.csproj" />
   </ItemGroup>
 
 </Project>
