--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlDatabaseConnection": "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
+  }
 }
