Added connection docker bariable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       ASPNETCORE_URLS: http://+:80
       ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__DefaultConnection: "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
     ports:
       - "5000:80"
       - "5001:443"
