Test mapping appsettings into docker from vps

--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlDatabaseConnection": "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
-  }
+  },
+  "Test": "test123"
 }
