--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.App/LanguageTeacher.App.csproj
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.App/LanguageTeacher.App.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
