--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       ASPNETCORE_URLS: http://+:80
       ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__DefaultConnection: "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
+      ConnectionStrings__DefaultConnection: Server=localhost;Database=language_teacher_db;User=root;Password=password;
+      Test: thisIsTest
     ports:
       - "5000:80"
       - "5001:443"
