Added mysqlstr to test mapping variables from vps

--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlDatabaseConnection": "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
+    "MySqlDatabaseConnection": "Server=localhost;Database=language_teacher_db;User=root;Password=password;"
   },
   "Test": "test123"
 }
