--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,23 +1,9 @@
 version: '3.8'
 
 services:
-  language-teacher-api:
-    build:
-      context: Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API
-      dockerfile: Dockerfile
-    environment:
-      ASPNETCORE_URLS: http://+:80
-      ASPNETCORE_ENVIRONMENT: Development
-    ports:
-      - "5000:80"
-      - "5001:443"
-    networks:
-      - lang-teach-network
-
   mysql:
     image: mysql:8.0
     container_name: mysql-container
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: language_teacher_db
@@ -27,8 +13,51 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./database-init:/docker-entrypoint-initdb.d
     networks:
       - lang-teach-network
+
+  language-teacher-api:
+    build:
+      context: Backend/LanguageTeacher
+      dockerfile: LanguageTeacher/LanguageTeacher.API/Dockerfile
+    environment:
+      ASPNETCORE_URLS: http://+:80
+      ASPNETCORE_ENVIRONMENT: Development
+    ports:
+      - "5000:80"
+      - "5001:443"
+    networks:
+      - lang-teach-network
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 3
+        window: 120s
+    depends_on:
+      - mysql
+
+  user-management-api:
+    build:
+      context: Backend/LanguageTeacher
+      dockerfile: UserManagement/UserManagement.API/Dockerfile
+    environment:
+      ASPNETCORE_URLS: http://+:80
+      ASPNETCORE_ENVIRONMENT: Development
+    ports:
+      - "5002:80"
+      - "5003:443"
+    networks:
+      - lang-teach-network
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 3
+        window: 120s
+    depends_on:
+      - mysql
 
 networks:
   lang-teach-network:
