--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,24 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:80
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=${ConnectionStrings__MySqlDatabaseConnection}
+      - ConnectionStrings__MySqlDatabaseConnectionLanguageTeacher=${ConnectionStrings__MySqlDatabaseConnectionLanguageTeacher}
     ports:
       - "5000:80"
       - "5001:443"
+    networks:
+      - lang-teach-network
+
+  user-management-api:
+    build:
+      context: Backend/LanguageTeacher
+      dockerfile: UserManagement/UserManagement.API/Dockerfile
+    environment:
+      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__MySqlDatabaseConnectionUserManagement=${ConnectionStrings__MySqlDatabaseConnectionUserManagement}
+    ports:
+      - "5002:80"
+      - "5003:443"
     networks:
       - lang-teach-network
 
