--- a/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
+++ b/Backend/LanguageTeacher/LanguageTeacher/LanguageTeacher.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlDatabaseConnection": "Server=mysql;Port=3306;Database=language_teacher_db;User=root;Password=password;"
+    "MySqlDatabaseConnectionLanguageTeacher": "Server=mysql;Port=3306;Database=language_teacher_db;User=root;Password=password;"
   }
 }
