Added fluentvalidation, logging, transaction pipelines, base register command, editorconfig

--- a/Backend/LanguageTeacher/UserManagement/UserManagement.API/UserManagement.API.csproj
+++ b/Backend/LanguageTeacher/UserManagement/UserManagement.API/UserManagement.API.csproj
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.4.1" /> 
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="5.1.0" /> 
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
@@ -26,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CommonUtilities\CommonUtilities.API\CommonUtilities.API.csproj" />
+    <ProjectReference Include="..\..\CommonUtilities\CommonUtilities.App\CommonUtilities.App.csproj" />
     <ProjectReference Include="..\UserManagement.App\UserManagement.App.csproj" />
     <ProjectReference Include="..\UserManagement.Domain\UserManagement.Domain.csproj" />
   </ItemGroup>
