--- a/Backend/LanguageTeacher/UserManagement/UserManagement.API/appsettings.json
+++ b/Backend/LanguageTeacher/UserManagement/UserManagement.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlDatabaseConnectionUserManagement": "Server=mysql;Port=3306;Database=user_management_db;User=root;Password=password;"
+    "MySqlDatabaseConnectionUserManagement": "Server=localhost;Port=3306;Database=user_management_db;User=root;Password=password;"
   }
 }
