--- a/Backend/LanguageTeacher/CommonUtilities/CommonUtilities.API/CommonUtilities.API.csproj
+++ b/Backend/LanguageTeacher/CommonUtilities/CommonUtilities.API/CommonUtilities.API.csproj
@@ -7,13 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
   </ItemGroup>
 
 </Project>
