--- a/Backend/LanguageTeacher/CommonUtilities/CommonUtilities.App/CommonUtilities.App.csproj
+++ b/Backend/LanguageTeacher/CommonUtilities/CommonUtilities.App/CommonUtilities.App.csproj
@@ -9,11 +9,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <ProjectReference Include="..\CommonUtilities.Domain\CommonUtilities.Domain.csproj" />
   </ItemGroup>
 
 </Project>
